# no_pain

./: .env  .env.example  .env_template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  debug_homepage.html  docker-compose.yml  justfile  main.py  pyproject.toml  requirements.txt  setup.cfg  verify_dashboard.py  verify_homepage.py  verify_roles.py
.github/workflows/: deploy.yml
backend/: main.py
backend/apis/: base.py  utils.py
backend/apis/general_pages/: route_homepage.py
backend/apis/v1/: route_doctors.py  route_general_pages.py  route_login.py  route_practice.py  route_users.py  route_working_hours.py
backend/core/: config.py  security.py
backend/db/: base.py  base_class.py  session.py
backend/db/models/: doctor_type.py  doctors.py  patients.py  practice.py  practices.py  speciality.py  users.py  working_hours.py
backend/db/repository/: doctors.py  login.py  practices.py  users.py  working_hours.py
backend/schemas/: doctors.py  practices.py  types.py  users.py  working_hours.py
backend/templates/auth/: login.html
backend/templates/components/: alerts.html  cards.html  doctor_details.html  doctor_list_card.html  doctor_working_hours.html  navbar.html  practice_details.html  practice_list_card.html  practice_list_card_selectable.html  practice_working_hours.html  working_hour_pick.html  working_hours.html
backend/templates/doctors/: add_working_hours.html  add_working_hours_practice.html  details.html  register.html  register_modal.html
backend/tests/: conftest.py
backend/webapps/: base.py  home.py
(+89 files in other folders)
